--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ h3 small {
 	padding-top: 3rem;
 }
 
+.imgCenter {
+	text-align: center;
+}
+
 /* Marvin ----------------------------------------------------------- */
 
 /* Dropdown Button */
